Fix inspiring quote going off screen

--- a/styles.css
+++ b/styles.css
@@ -30,7 +30,7 @@ a{
 
 button{
     width: 96px;
-    padding: 4px;
+    padding: 16px;
 }
 
 .welcome-signup button{
@@ -124,7 +124,6 @@ button{
     flex: auto;
     flex-direction: column;
     background-color: #e5e7eb;
-    width: 100%;
     justify-content: center;
     flex: 1 1 auto;
     padding: 64px;
@@ -147,9 +146,7 @@ button{
 }
 
 .footer-signup-div{
-    display:flex;
-    justify-content: center;
-    margin: 24px;
+    margin: 128px;
 }
 
 
